flux/untrusted/karakeep/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: karakeep
  namespace: karakeep
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`karakeep.kschamer.info`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
      services:
        - name: karakeep
          port: 3000
  tls:
    certResolver: letsencrypt
    domains:
      - main: kschamer.info
        sans:
          - "*.kschamer.info"
