flux/untrusted/karakeep/network-policies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: karakeep
  namespace: karakeep
spec:
  description: "Allow Traefik ingress to Karakeep in the untrusted zone"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: karakeep

  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.namespace.labels.network-zone: dmz
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
